force-app/main/default/objects/SIOC__Score__c/SIOC__Score__c.object-meta.xml
<CustomObject>
    <label>Identification Score</label>
    <nameField>
        <displayFormat>IDSCORE-{00000}</displayFormat>
        <label>Identification Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identification Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>