force-app/main/default/objects/SIOC__Score__c/fields/SIOC__ScoreMax__c.field-meta.xml
<CustomField>
    <fullName>SIOC__ScoreMax__c</fullName>
    <description>The system automatically populates this optional number field with the maximum score returned from the provider.</description>
    <label>Maximum Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>