force-app/main/default/objects/SIOC__Score__c/fields/SIOC__ScoreMin__c.field-meta.xml
<CustomField>
    <fullName>SIOC__ScoreMin__c</fullName>
    <description>The system automatically populates this optional number field with the minimum score returned from the provider.</description>
    <label>Minimum Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>