force-app/main/default/objects/SIOC__Score__c/fields/SIOC__TypeCode__c.field-meta.xml
<CustomField>
    <fullName>SIOC__TypeCode__c</fullName>
    <description>The system automatically populates this optional text field with the score type code returned from the provider.</description>
    <label>Type Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>