force-app/main/default/objects/SIOC__Score__c/fields/SIOC__TypeDescription__c.field-meta.xml
<CustomField>
    <fullName>SIOC__TypeDescription__c</fullName>
    <description>The system automatically populates this optional text field with the score type description returned from the provider.</description>
    <label>Type Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>